<resources>
    <string name="app_name">My_Calculator</string>
    <string name="zero">0</string>
    <string name="Division_of_numbers">÷</string>
    <string name="percent">%</string>
    <string name="Reverse_sign">+/-</string>
    <string name="discharge">AC</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplication">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
</resources>