<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/standard_indent"
        app:layout_constraintBottom_toTopOf="@+id/container_buttons"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:autoSizeTextType="uniform"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="70sp"
            tools:ignore="UnusedAttribute" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_indent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/half_indent"
            android:weightSum="4">

            <Button
                android:id="@+id/button_clear"
                style="@style/Button.Gray"
                android:onClick="clear"
                android:text="@string/discharge" />

            <Button
                android:id="@+id/button_Reverse_sign"
                style="@style/Button.Gray"
                android:layout_marginHorizontal="@dimen/standard_indent"
                android:text="@string/Reverse_sign" />

            <Button
                android:id="@+id/button_percent"
                style="@style/Button.Gray"
                android:layout_marginEnd="@dimen/standard_indent"
                android:text="@string/percent" />

            <Button
                android:id="@+id/button_Division_of_numbers"
                style="@style/Button.Orange"
                android:onClick="onOperationClick"
                android:text="@string/Division_of_numbers" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/half_indent"
            android:weightSum="4">

            <Button
                android:id="@+id/button_7"
                style="@style/Button.Dark_gray"
                android:onClick="onNumberClick"
                android:text="@string/_7" />

            <Button
                android:id="@+id/button_8"
                style="@style/Button.Dark_gray"
                android:layout_marginHorizontal="@dimen/standard_indent"
                android:onClick="onNumberClick"
                android:text="@string/_8" />

            <Button
                android:id="@+id/button_9"
                style="@style/Button.Dark_gray"
                android:layout_marginEnd="@dimen/standard_indent"
                android:onClick="onNumberClick"
                android:text="@string/_9" />

            <Button
                android:id="@+id/button_multiplication"
                style="@style/Button.Orange"
                android:onClick="onOperationClick"
                android:text="@string/multiplication" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/half_indent"
            android:weightSum="4">

            <Button
                android:id="@+id/button_4"
                style="@style/Button.Dark_gray"
                android:onClick="onNumberClick"
                android:text="@string/_4" />

            <Button
                android:id="@+id/button_5"
                style="@style/Button.Dark_gray"
                android:layout_marginHorizontal="@dimen/standard_indent"
                android:onClick="onNumberClick"
                android:text="@string/_5" />

            <Button
                android:id="@+id/button_6"
                style="@style/Button.Dark_gray"
                android:layout_marginEnd="@dimen/standard_indent"
                android:onClick="onNumberClick"
                android:text="@string/_6" />

            <Button
                android:id="@+id/button_minus"
                style="@style/Button.Orange"
                android:onClick="onOperationClick"
                android:text="@string/minus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/half_indent"
            android:weightSum="4">

            <Button
                android:id="@+id/button_1"
                style="@style/Button.Dark_gray"
                android:onClick="onNumberClick"
                android:text="@string/_1" />

            <Button
                android:id="@+id/button_2"
                style="@style/Button.Dark_gray"
                android:layout_marginHorizontal="@dimen/standard_indent"
                android:onClick="onNumberClick"
                android:text="@string/_2" />

            <Button
                android:id="@+id/button_3"
                style="@style/Button.Dark_gray"
                android:layout_marginEnd="@dimen/standard_indent"
                android:onClick="onNumberClick"
                android:text="@string/_3" />

            <Button
                android:id="@+id/button_plus"
                style="@style/Button.Orange"
                android:onClick="onOperationClick"
                android:text="@string/plus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/half_indent"
            android:weightSum="4">


            <Button
                android:id="@+id/button_zero"
                style="@style/Button.Dark_gray"
                android:layout_width="0dp"
                android:layout_marginHorizontal="@dimen/standard_indent"
                android:layout_weight="2"
                android:gravity="start|center_vertical"
                android:onClick="onNumberClick"
                android:paddingStart="24dp"
                android:text="@string/zero"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/button_point"
                style="@style/Button.Dark_gray"
                android:layout_marginEnd="@dimen/standard_indent"
                android:text="@string/point" />

            <Button
                android:id="@+id/button_equals"
                style="@style/Button.Orange"
                android:onClick="computeCalculation"
                android:text="@string/equals" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>